--- a/stack.yaml
+++ b/stack.yaml
@@ -39,6 +39,10 @@ flags:
     debug: true
   accelerate-fft:
     llvm-ptx: false
+    llvm-cpu: false
+#  accelerate-llvm-native:
+#    unsafe-checks: true
+#    internal-checks: true
 
 # Extra package databases containing global packages
 # extra-package-dbs: []
