Added some quite old stuff

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,12 @@ cabal.sandbox.config
 *.hp
 *.eventlog
 .stack-work/
+.stack-work-profile/
 cabal.project.local
 cabal.project.local~
 .HTF/
 .ghc.environment.*
+
+Profiling/
+
+\.vscode/
