--- a/stack.yaml
+++ b/stack.yaml
@@ -2,30 +2,37 @@
 # https://docs.haskellstack.org/en/stable/yaml_configuration/
 
 # Resolver to choose a specific stackage snapshot or a compiler version
-resolver: lts-9.0
+resolver: lts-13.5
 allow-newer: true
 
 # User packages to be built
 packages:
 - .
+- ../../Accelerate
+- ../../accelerate-llvm/accelerate-llvm
+- ../../accelerate-llvm/accelerate-llvm-native
+- ../../llvm-hs/llvm-hs
+- ../../llvm-hs/llvm-hs-pure
+- ../../Accelerate-fft
+
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 extra-deps:
-- git:    https://github.com/AccelerateHS/accelerate.git
-  commit: 36f86c5e9ed6cd393b69b7c2c295c88d852935c8
+#- git:    https://github.com/AccelerateHS/accelerate.git
+#  commit: 36f86c5e9ed6cd393b69b7c2c295c88d852935c8
 #  commit: d948d737683bc2f340b56319a4412505274502fc
 
 #
 
-- git:    https://github.com/AccelerateHS/accelerate-llvm.git
-  commit: 56fb32ab6b17bfa724c33a1eee596f573c6ba495
+#- git:    https://github.com/AccelerateHS/accelerate-llvm.git
+#  commit: 56fb32ab6b17bfa724c33a1eee596f573c6ba495
 #- git:    https://github.com/tmcdonell/accelerate-llvm.git
 #  commit: 4a6c35ae4382d8e5de8b74e36a988e5437c5c01a
 #commit: a7a5c89a35f766dd14f6f2a982ea165bed0fcac1
-  subdirs:
-    - accelerate-llvm
-    - accelerate-llvm-native
-    - accelerate-llvm-ptx
+#  subdirs:
+#    - accelerate-llvm
+#    - accelerate-llvm-native
+#    - accelerate-llvm-ptx
 
 #- git:    https://github.com/tmcdonell/accelerate-fft.git
 #  commit: 782a873c000a89fd521e1ce4107daaf14bdc819d
@@ -38,25 +45,35 @@ extra-deps:
 
 - lens-accelerate-0.2.0.0
 - accelerate-io-1.0.0.1
-- accelerate-fft-1.1.0.0
+#- accelerate-fft-1.1.0.0
 
-- llvm-hs-4.0.0.0
+#- llvm-hs-4.2.0
+#- git: https://github.com/sakehl/llvm-hs.git
+#  commit: 1fdcbd80314c3e5e229fba191eefc5eaf779fef3
+#  subdirs:
+#    - llvm-hs
 
-- llvm-hs-pure-4.0.0.0
+#- llvm-hs-pure-4.1.0.0
 - repa-3.4.1.4
 
 - vector-0.12.0.1
+- pretty-1.1.3.6
+#- cuda-0.10.0.0
 
 # Override default flag values for local packages and extra-deps
 flags:
   accelerate:
     debug: true
+    unsafe-checks : true
+    internal-checks : true
   accelerate-fft:
     llvm-ptx: false
     llvm-cpu: false
 #  accelerate-llvm-native:
 #    unsafe-checks: true
 #    internal-checks: true
+#  ska-sdp-accelerate:
+#    llvm-gpu: true
 
 # Extra package databases containing global packages
 # extra-package-dbs: []
@@ -74,7 +91,7 @@ flags:
 #
 # Extra directories used by stack for building
 # extra-include-dirs: [/path/to/dir]
-# extra-lib-dirs: [/path/to/dir]
+extra-lib-dirs: [/home/lars/llvm-4.0/lib]
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
