--- a/ska-sdp-accelerate.cabal
+++ b/ska-sdp-accelerate.cabal
@@ -74,8 +74,11 @@ executable ska-sdp-accelerate-exe
     other-modules:
         Paths_ska_sdp_accelerate
     default-language: Haskell2010
-    ghc-options: -threaded -rtsopts -with-rtsopts=-N
-                 -with-rtsopts=-sstderr -O2
+    ghc-options: -threaded 
+                 -rtsopts 
+                 -with-rtsopts=-N
+                 -with-rtsopts=-sstderr
+                 -O2
     build-depends:
         accelerate -any,
         accelerate-fft -any,
